--- a/PMS-PropertyHapa/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa/Views/Shared/_Layout.cshtml
@@ -62,8 +62,7 @@
                                 <li class="nav-item"><a class="nav-link" href="#pricing">Pricing</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>
                                 <li class="nav-item"><a class="nav-link" href="">Contact Us</a></li>
-@*                                 <li class="nav-item"><a class="nav-link" href="Auth/Login">Login</a></li>
- *@                                <li class="nav-item"><a class="nav-link" href="Auth/Register">Sign Up</a></li>
+                                <li class="nav-item"><a class="nav-link" href="@Url.Action("Register", "Auth")">Sign Up</a></li>
                             </ul>
                             <div class="buy-block">
                                 <div id="pmcPortalDiv" class="d-none">
