Calendar Occupancy calendar Login Resolved

--- a/PMS-PropertyHapa.Staff/Views/Shared/ManagePropertyforOwnerLayout.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Shared/ManagePropertyforOwnerLayout.cshtml
@@ -336,12 +336,12 @@
                                     </ul>
                                 </li>
                             </ul>
-                            <div class="sidebar-img-section">
+                           @*  <div class="sidebar-img-section">
                                 <div class="sidebar-img-content">
                                     <img class="img-fluid" src="../assets/images/side-bar.png" alt="">
                                     <h4>Feed Back</h4><a class="txt" href="#">Feedback is the breakfast of champions."</a><a class="btn btn-secondary" href="#">Give Feedback</a>
                                 </div>
-                            </div>
+                            </div> *@
                         </div>
                         <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
                     </nav>
