--- a/PMS-PropertyHapa.Staff/Views/Calendar/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Calendar/Index.cshtml
@@ -179,9 +179,9 @@
 
         $.ajax({
             url: '../Calendar/GetEvents',
-            type: 'GET',
-            traditional: true,
-            data: filterData,
+            type: 'POST',
+            contentType: 'application/json',
+            data: JSON.stringify(filterData),
 
             success: function (response) {
                 calendar.getEvents().forEach(function (event) {
@@ -273,9 +273,7 @@
         if ($("#createdAtRange").val()){
             var dates = $("#createdAtRange").val().split('-');
             startDateFilter = dates[0];
-            console.log(dates[0]);
             endDateFilter = dates[1];
-            console.log(dates[1]);
         }
         fetchEvents();
     }
