vendor intial push edit fix

--- a/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
@@ -50,6 +50,10 @@
             padding: 3px 30px !important;
         }
 
+        .page-wrapper.compact-wrapper .page-body-wrapper div.sidebar-wrapper .sidebar-main .simplebar-offset {
+            height: calc(100vh - 15vh);
+        }
+
 /*         .profile-greeting {
             position: relative !important;
             background-color: var(--theme-deafult) !important;
