vendor complete Menu changes fix

--- a/PMS-PropertyHapa.Staff/Views/Communication/AddCommunication.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Communication/AddCommunication.cshtml
@@ -7,8 +7,6 @@
 
 <head>
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-
     <style>
         .square-card {
             width: 150px;
@@ -82,7 +80,6 @@
 
     </style>
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
 
 
@@ -140,7 +137,7 @@
                                             <label class="card square-card border p-3">
                                                 <input name="propertiesRadioBtn" value="all" type="radio" hidden>
                                                 <div class="radio-details">
-                                                    <i class="fas fa-city fa-2x mb-2"></i>
+                                                    <i class="fa fa-building fa-2x mb-2"></i>
                                                     <p class="fs-6 text-dark fw-bold mb-0">All Properties</p>
                                                 </div>
                                             </label>
@@ -151,7 +148,7 @@
                                             <label class="card square-card border p-3">
                                                 <input name="propertiesRadioBtn" value="some" type="radio" hidden>
                                                 <div class="radio-details">
-                                                    <i class="fas fa-home fa-2x mb-2"></i>
+                                                    <i class="fa fa-home fa-2x mb-2"></i>
                                                     <p class="fs-6 text-dark fw-bold mb-0">Some Properties</p>
                                                 </div>
                                             </label>
@@ -176,7 +173,7 @@
                                                 <label class="card square-card border p-3">
                                                     <input name="tenantsRadioBtn" value="all" type="radio" hidden>
                                                     <div class="radio-details">
-                                                        <i class="fas fa-users fa-2x mb-2"></i>
+                                                        <i class="fa fa-users fa-2x mb-2"></i>
                                                         <p class="fs-6 text-dark fw-bold mb-0">All Tenants</p>
                                                     </div>
                                                 </label>
@@ -187,7 +184,7 @@
                                                 <label class="card square-card border p-3">
                                                     <input name="tenantsRadioBtn" value="some" type="radio" hidden>
                                                     <div class="radio-details">
-                                                        <i class="fas fa-user fa-2x mb-2"></i>
+                                                        <i class="fa fa-user fa-2x mb-2"></i>
                                                         <p class="fs-6 text-dark fw-bold mb-0">Some Tenants</p>
                                                     </div>
                                                 </label>
@@ -291,9 +288,9 @@
                                             <p class="fs-6 text-dark">This announcement will be delivered via:</p>
                                         </div>
                                         <div id="iconContainer" class="col-12 d-flex flex-column align-items-start">
-                                            <div id="emailDeliveryIcon" style="display: none;"><i class="fas fa-envelope fa-2x text-primary mb-2" title="Email"></i> Email</div>
-                                            <div id="textMessageDeliveryIcon" style="display: none;"><i class="fas fa-sms fa-2x text-success mb-2" title="Text Message"></i> Text Message</div>
-                                            <div id="tenantPortalDeliveryIcon" style="display: none;"><i class="fas fa-globe fa-2x text-info mb-2" title="Tenant Portal"></i> Tenant Portal</div>
+                                            <div id="emailDeliveryIcon" style="display: none;"><i class="fa fa-envelope fa-2x text-primary mb-2" title="Email"></i> Email</div>
+                                            <div id="textMessageDeliveryIcon" style="display: none;"><i class="fa fa-phone fa-2x text-success mb-2" title="Text Message"></i> Text Message</div>
+                                            <div id="tenantPortalDeliveryIcon" style="display: none;"><i class="fa fa-globe fa-2x text-info mb-2" title="Tenant Portal"></i> Tenant Portal</div>
                                         </div>
                                     </div>
                                     <br><br>
