--- a/PMS-PropertyHapa.Staff/Views/Landlord/AddLandlord.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Landlord/AddLandlord.cshtml
@@ -228,6 +228,13 @@
                                                 <input type="text" class="form-control" id="Fax" name="Fax" value="@Model?.Fax" value="@Model?.Fax" required />
                                             </div>
                                         </div>
+                                        
+                                        <div class="col-sm-6 col-md-3">
+                                            <div class="mb-3">
+                                                <label for="TaxId" class="form-label">TaxId</label>
+                                                <input type="text" class="form-control" id="TaxId" name="TaxId" value="@Model?.TaxId" value="@Model?.TaxId" required />
+                                            </div>
+                                        </div>
                                     </div>
                                     <hr />
                                     <br />
