--- a/PMS-PropertyHapa.Staff/Views/Calendar/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Calendar/Index.cshtml
@@ -30,6 +30,7 @@
                 <div class="card">
                     <div class="card-header d-flex justify-content-between align-items-center">
                         <h4 class="card-title mb-0 flex-grow-1 font-weight-bold">Filters</h4>
+                        <a href="@Url.Action("OccupancyOverview","Calendar")" class="btn btn-primary">Occupancy Overview</a>
                     </div>
                     <div class="card-body">
                         <div class="row mt-1 d-flex">
