--- a/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
@@ -259,27 +259,12 @@
                                         <li><a href="@Url.Action("AddMaintance","Maintance")">Add Maintance</a></li>
                                     </ul>
                                 </li>
-       @*                          <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title" href="#">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg>
-                                        <span> Vendor</span>
-                                    </a>
-                                    <ul class="sidebar-submenu">
-                                        <li><a href="@Url.Action("Index","Vendor")">View  Vendor</a></li>
-                                        <li><a href="@Url.Action("AddVendor","Vendor")">Add  Vendor</a></li>
-                                    </ul>
-                                </li> *@
+
 
                                 <li class="sidebar-link">
                                     <a class="sidebar-link sidebar-title link-nav" href="@Url.Action("Index","Vendor")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg>
                                         <span> Vendor</span>
-                                    </a>
-                                </li>
-                                <li class="sidebar-link">
-                                    <a class="sidebar-link sidebar-title link-nav" href="@Url.Action("VendorCategories","Vendor")">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg>
-                                        <span> Vendor Categories</span>
                                     </a>
                                 </li>
 
@@ -300,23 +285,18 @@
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-aperture"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg><span>Task</span>
                                     </a>
                                 </li>
-                                <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title" href="@Url.Action("Index","Communication")">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg><span>Communication</span>
+
+                                <li class="sidebar-link">
+                                    <a class="sidebar-link sidebar-title link-nav" href="@Url.Action("Index","Communication")">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>      
+                                        <span> Communication</span>
                                     </a>
-                                    @*   <ul class="sidebar-submenu">
-                                    <li><a href="@Url.Action("SMS","Communication")">Add SMS</a></li>
-                                    <li><a href="@Url.Action("Email","Communication")"></a></li>
-                                    </ul> *@
                                 </li>
-                                <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title" href="#">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg><span> Calendar</span>
+         
+                                <li class="sidebar-link">
+                                    <a class="sidebar-link sidebar-title link-nav" href="@Url.Action("Index","Calendar")">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg><span>Calendar</span>
                                     </a>
-                                    <ul class="sidebar-submenu">
-                                        <li><a href="@Url.Action("Index","Calendar")">View Calendar</a></li>
-                                        <li><a href="@Url.Action("OccupancyOverview","Calendar")">Occupancy Overview</a></li>
-                                    </ul>
                                 </li>
                                 <li class="sidebar-list">
                                     <a class="sidebar-link sidebar-title" href="#">
